# rulac

./: Cargo.toml
benches/: skeleton.rs
models/common/: propagators.toml  spin_relations.json  spin_structures.py  spin_structures.toml  wavefunctions.toml
src/: lib.rs
src/color/: mod.rs  tensor.rs
src/color/flow/: chain.rs  mod.rs  structure.rs  validate.rs  vertex.rs
src/math_expr/: eval.rs  lorentz.rs  mod.rs  number.rs  parse.rs
src/math_expr/lorentz/: mod.rs  propagators.rs  tensor_components.rs  vertex_structures.rs
src/python/: convert_math.py  convert_ufo.py  util.py
src/skeleton/: builder.rs  mod.rs  vertex_list.rs
src/skeleton/colored/: colorizer.rs  mod.rs
src/skeleton/uncolored/: builder.rs  coupling_orders.rs  mod.rs  vertex_checker.rs  vertex_list.rs
src/spin/: mod.rs  propagators.rs  tensor_components.rs  vertex_structures.rs  wavefunctions.rs
src/ufo/: convert.py  math.rs  mod.rs  param_card.rs  parameters.rs  read.rs
src/util/: combinations.rs  mod.rs
tests/models/sm_mg5/: py3_model.pkl
tests/models_json/SM_NLO/: coupling_orders.json  couplings.json  decays.json  function_library.json  lorentz.json  parameters.json  parameters.toml  particles.json  propagators.json  vertices.json
tests/models_json/loop_MSSM/: function_library.json  lorentz.json  parameters.json  parameters.toml  particles.json  vertices.json
tests/models_json/sm_mg5/: coupling_orders.json  couplings.json  function_library.json  lorentz.json  parameters.json  parameters.toml  particles.json  vertices.json
