[package]
name = "helac_rs"
version = "0.1.0"
authors = ["Torsten Weber <torstenweber12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
permutohedron = "^0.2"
toml = "0.5.8"
num-complex = { version = "^0.3.1", features = ["serde"] }
num-traits = "0.2.14"
num-rational = "0.3"
rustpython-parser = "0.1.2"
serde_repr = "0.1.6"
